# nekomata

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
container/: test.Containerfile
docker/: test.Containerfile  test.sh
scripts/: test.sh
src/nekomata/: __init__.py  const.py  version.py
src/nekomata/clients/: __init__.py  base.py  factory.py  registry.py  utils.py
src/nekomata/clients/plugins/: __init__.py  anthropic.py  google.py  openai.py
src/nekomata/clients/providers/: anthropic.py  google.py  openai.py
src/nekomata/dispatcher/: __init__.py  dispatcher.py  sync.py
src/nekomata/types/: __init__.py  anthropic.py  clients.py  dispatcher.py  google.py  integrations.py  openai.py  plugins.py
src/nekomata/utils/: __init__.py  logger.py  misc.py  registry.py  uuid.py
tests/: test_anthropic_client.py  test_client_registry.py  test_dispatcher.py  test_factory.py  test_google_client.py  test_logger.py  test_misc.py  test_openai_client.py  test_registry.py  test_sync_dispatcher.py  test_uuid.py
